Avoid broken layout with long words

--- a/assets/base.css
+++ b/assets/base.css
@@ -117,6 +117,7 @@ body {
   min-height: 100%;
   width: 100%;
   overflow-x: clip;
+  word-break: break-word;
 }
 
 body > * {
